General revision and updates